# bex

./: .gitignore  Makefile.am  autogen.sh  configure.ac  fetch.c
include/: Makemodule.am  c.h  colors.h  debug.h  list.h  nls.h  strutils.h  xalloc.h
lib/: Makemodule.am  colors.c
libbex/: Makemodule.am  bex.pc.in
libbex/src/: Makemodule.am  array.c  bexP.h  channel-ticker.c  channel-trades.c  channel.c  event.c  init.c  iter.c  libbex.h.in  libbex.sym  platform.c  symbol.c  value-list.c  value.c  version.c  wss.c
m4/: bex.m4
po/: Makevars  update-potfiles
src/: Makemodule.am  fetch.c  ping.c  ticker.c  trades.c
